<resources>
    <string name="app_name">Zavrsni</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_discover">Discover</string>
    <string name="navigation_group_info">Group Info</string>
    <string name="navigation_device_info">Device Info</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_about">About</string>

    <string name="action_discover">Scan</string>
    <string name="action_stop_connect">Cancel</string>

    <string name="group_info_group_owner_device">Group Owner: %1$s</string>
    <string name="group_info_interface">Interface: %1$s</string>
    <string name="group_info_network_name">Network name: %1$s</string>
    <string name="group_info_passphrase">Passphrase: %1$s</string>
    <string name="group_info_is_group_owner">Is GO: %1$b</string>
    <string name="group_info_is_group_formed">Is Group formed: %1$b</string>
    <string name="group_info_group_owner_address">GO address: %1$s</string>

    <string name="device_info_device_address">Address: %1$s</string>
    <string name="device_info_device_name">Name: %1$s</string>
    <string name="device_info_device_status">Status: %1$s</string>
    <string name="device_info_primary_type">Primary type: %1$s</string>
    <string name="device_info_secondary_type">Secondary type: %1$s</string>
    <string name="device_info_is_group_owner">Is GO: %1$b</string>
    <string name="device_info_is_service_discovery_capable">Is service discovery capable: %1$b</string>
    <string name="device_info_wps_display_support">WPS display support: %1$b</string>
    <string name="device_info_wps_keypad_support">WPS keypad support: %1$b</string>
    <string name="device_info_wps_pbc_support">WPS PBC support: %1$b</string>

    <string name="device_list_fragment_dialog_negative">Cancel</string>
    <string name="device_list_fragment_dialog_text_connect">Connect to device</string>
    <string name="device_list_fragment_dialog_text_disconnect">Disconnect from device</string>
    <string name="device_list_fragment_dialog_text_cancel_connect">Cancel invitation</string>
    <string name="device_list_fragment_dialog_positive_connect">Connect</string>
    <string name="device_list_fragment_dialog_positive_disconnect">Disconnect</string>
    <string name="device_list_fragment_dialog_positive_cancel_connect">Disinvite</string>
    <string name="group_info_create_group">Create Group</string>
    <string name="group_info_remove_group">Remove Group</string>
    <string name="device_list_empty_view_no_discovery">Click the scan icon in the toolbar to discover devices…</string>
    <string name="device_list_empty_view_no_devices">Scanning for devices…</string>
    <string name="chat_fragment_send">Send</string>
    <string name="group_info_start_chat">Chat</string>


</resources>
