<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/nav_main_options">
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_devices_black_24dp"
            android:title="@string/navigation_discover" />
        <item
            android:id="@+id/nav_group_info"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/navigation_group_info" />
        <item
            android:id="@+id/nav_device_info"
            android:icon="@drawable/ic_phone_android_black_24dp"
            android:title="@string/navigation_device_info" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/nav_other_options">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/navigation_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/navigation_about" />
    </group>

</menu>
